@@ -1,5 +1,6 @@
 Changelog for GHCiD
 
+    Remove duplicate error messages from cabal repl
 0.1.3
     #2, handle files that get deleted while loaded
     #3, flesh out the test suite
